--- a/src/weather.css
+++ b/src/weather.css
@@ -132,6 +132,9 @@ body{
     gap: 30px;
     width: 100%;
     justify-content: center;
+    /* overflow-x: scroll; */
+    padding: 5px;
+    scroll-behavior: smooth;
 }
 .date{
     padding: 4px;
@@ -145,7 +148,20 @@ body{
     transform-origin: center;
     border-radius: 3px;
 }
-
+#dates::-webkit-scrollbar {
+    width: 8px;
+    height: 4px;
+}
+#dates::-webkit-scrollbar-thumb {
+    background-color: brown; 
+    border-radius: 10px;
+    /* border: 3px solid #f1f1f1; */
+}
+  
+#dates::-webkit-scrollbar-thumb:hover {
+    cursor: pointer;
+    background-color: rgba(165, 42, 42, 0.676); 
+}
 #stats{
     display: flex;
     flex-direction: row;
@@ -158,7 +174,7 @@ body{
 
 #stats::-webkit-scrollbar {
     width: 12px;
-    height: 8px;
+    height: 6px;
     scroll-behavior: smooth;
 }
 #stats::-webkit-scrollbar-thumb {
@@ -191,7 +207,7 @@ body{
     border: white;
     cursor: pointer;
     height: calc(20vh * 1.025);
-    transition: 0.5s ease;
+    transition: 0.35s ease;
     transform: scale(1.05);
     transform-origin: center;
 }
