--- a/src/weather.css
+++ b/src/weather.css
@@ -7,7 +7,7 @@
 
 body{
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: whitesmoke;
     color: brown;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -31,7 +31,6 @@ body{
     display: flex;
     justify-content: space-around;
     height: 10vh;
-    min-height: 9.9vh !important;
     background: brown;
     color: whitesmoke;
     align-items: center;
@@ -75,7 +74,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 5vh;
-    width: 96vw;
+    width: 96%;
     height: 85vh;
     padding: 5px;
     margin: 0 auto;
@@ -84,6 +83,7 @@ body{
 #info{
     display: flex;
     height: 15vh;
+    /* width: 100%; */
     justify-content: space-evenly;
 }
 
@@ -129,7 +129,7 @@ body{
 
 #dates{
     display: flex;
-    gap: 30px;
+    gap: 3%;
     width: 100%;
     justify-content: center;
     /* overflow-x: scroll; */
@@ -244,3 +244,56 @@ body{
     0%   { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+ @media (max-width: 880px) {
+    #currentConditions h4{
+        font-size: 14px;
+    }
+    #locationInfo h4{
+        font-size: 14px;
+    }
+  }
+
+  @media(max-width: 815px){
+    /* body{
+        gap: 3vh;
+    }
+    #container{
+        gap: 10vh;
+    }
+    #header{
+        height: 8.9vh !important;
+    }
+    #header h1{
+        font-size: 28px;
+    }
+    #info{
+        flex-direction: column;
+        align-items: center;
+        height: 25vh;
+    }
+    #locationInfo{
+        justify-content: center;
+        align-items: center;
+    }
+    #weatherStats{
+        gap: 10%;
+    } */
+    #locationInfo h2{
+        font-size: 22px;
+    }
+    #weatherInfo h3{
+        font-size: 16px;
+    }
+    #dates{
+        font-size: 12px;
+    }
+}  
+
+   /* @media (max-width: 810px)  {
+    #currentConditions h4{
+        font-size: 13px;
+    }
+  } */
+
+  
